assets/css/dark-mode.css
/*!
 * Dark Mode Switch v1.0.1 (https://github.com/coliff/dark-mode-switch)
 * Copyright 2021 C.Oliff
 * Licensed under MIT (https://github.com/coliff/dark-mode-switch/blob/main/LICENSE)
 */

 [data-theme="dark"] {
    background-color: #111 !important;
    color: #eee;
  }
  
  [data-theme="dark"] .bg-black {
    background-color: #fff !important;
  }
  
  [data-theme="dark"] .bg-dark {
    background-color: #eee !important;
  }
  
  [data-theme="dark"] .bg-light {
    background-color: #222 !important;
  }
  
  [data-theme="dark"] .bg-white {
    background-color: #000 !important;
  }

